🛠️Fix: Word Wrapping on Firefox

--- a/extension/css/content.css
+++ b/extension/css/content.css
@@ -190,6 +190,8 @@ body.JF_.JF_dark {
   left: 0;
   bottom: 0;
   right: 0;
+  white-space: pre;
+  word-wrap: normal;
 }
 
 .JF_parsed {
